--- a/app/src/main/res/layout/content_detailed_page.xml
+++ b/app/src/main/res/layout/content_detailed_page.xml
@@ -1,9 +1,5 @@
-<fragment xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/fragment"
-    android:name="homepunk.lesson.first.contollers.fragments.DetailedPageActivityFragment"
+<FrameLayout android:id="@+id/content_fragment_id"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:layout="@layout/fragment_detailed_page" />
+    xmlns:android="http://schemas.android.com/apk/res/android">
+    </FrameLayout>
