--- a/app/src/main/res/layout/activity_detailed_page.xml
+++ b/app/src/main/res/layout/activity_detailed_page.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
     android:background="@color/colorBackgroundLight"
-    tools:context="homepunk.lesson.first.contollers.activity.DetailedPageActivity">
+    tools:context="homepunk.lesson.first.contollers.homepunk.lesson.first.activity.DetailedPageActivity">
 
     <include layout="@layout/content_detailed_page" />
 
