--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -10,7 +10,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="homepunk.lesson.first.contollers.activity.MainActivity"
+    tools:context="homepunk.lesson.first.contollers.homepunk.lesson.first.activity.MainActivity"
     tools:showIn="@layout/app_bar_main">
 
 </RelativeLayout>
