--- a/app/src/main/res/layout/content_movies.xml
+++ b/app/src/main/res/layout/content_movies.xml
@@ -2,7 +2,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/fragment"
-    android:name="homepunk.lesson.first.contollers.fragments.MainActivityFragment"
+    android:name="homepunk.lesson.first.activity.MainActivityFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_marginTop="2dp"
