--- a/app/src/main/res/layout/fragment_main_movies.xml
+++ b/app/src/main/res/layout/fragment_main_movies.xml
@@ -5,7 +5,7 @@
     android:id="@+id/content_movies"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="homepunk.lesson.first.contollers.homepunk.lesson.first.activity.MainActivityFragment"
+    tools:context="homepunk.lesson.first.view.main.MainActivityFragment"
     tools:showIn="@layout/activity_movies">
 
     <android.support.v7.widget.RecyclerView
