--- a/app/src/main/res/layout/list_item_film.xml
+++ b/app/src/main/res/layout/list_item_film.xml
@@ -9,8 +9,7 @@
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        card_view:cardCornerRadius="5dp">
+        android:layout_height="wrap_content">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -29,21 +28,7 @@
                 android:scaleType="centerCrop"
                 app:layout_collapseMode="parallax"
                 app:layout_scrollFlags="scroll|enterAlways" />
-            <!-- <View
-                 android:layout_width="match_parent"
-                 android:layout_height="match_parent"
-                 android:background="@drawable/poster_gradient" />-->
-            <!--<TextView
-                android:id="@+id/item_title"
-                android:layout_width="match_parent"
-                android:layout_height="24dp"
-                android:layout_alignParentBottom="true"
-                android:background="@color/colorAccent"
-                android:layout_weight="1"
-                android:fontFamily="sans-serif"
-                android:gravity="center"
-                android:textColor="#eefcfcfc"
-                android:textSize="12sp" />-->
+
         </LinearLayout>
 
     </android.support.v7.widget.CardView>
