spinner hide logic implemented

--- a/app/src/main/res/layout/activity_detailed.xml
+++ b/app/src/main/res/layout/activity_detailed.xml
@@ -8,7 +8,7 @@
     android:background="@color/colorBackgroundLight"
     tools:context="homepunk.lesson.first.contollers.homepunk.lesson.first.activity.DetailedPageActivity">
 
-    <include layout="@layout/content_detailed_page" />
+    <include layout="@layout/content_detailed" />
 
 
 </android.support.design.widget.CoordinatorLayout>
