--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -5,14 +5,12 @@
     android:id="@+id/content_movies"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="homepunk.lesson.first.view.main.MainActivityFragment"
-    tools:showIn="@layout/activity_movies">
-
+    tools:context="homepunk.lesson.first.view.main.MainFragment"
+    tools:showIn="@layout/content_main">
     <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/movies_rv"
         android:scrollbars="horizontal"
         android:clipToPadding="false"/>
-    <!--android:layout_below="@+id/imageView"-->
 </RelativeLayout>
