--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,8 +8,9 @@
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
     tools:openDrawer="start">
+
     <include
-        layout="@layout/activity_movies"
+        layout="@layout/content_main"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
@@ -21,7 +22,7 @@
         android:fitsSystemWindows="true"
         android:background="@color/colorBackgroundLightTwo"
         app:itemIconTint="@color/colorTextSelected"
-        app:headerLayout="@layout/nav_header_main"
+        app:headerLayout="@layout/nav_drawer_header"
         app:menu="@menu/activity_main_drawer" />
 
 </android.support.v4.widget.DrawerLayout>
