--- a/app/src/main/res/layout/list_item_tvseries.xml
+++ b/app/src/main/res/layout/list_item_tvseries.xml
@@ -9,7 +9,8 @@
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        app:cardCornerRadius="7dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -28,9 +29,6 @@
                 android:scaleType="centerCrop"
                 app:layout_collapseMode="parallax"
                 app:layout_scrollFlags="scroll|enterAlways" />
-
         </LinearLayout>
-
     </android.support.v7.widget.CardView>
-
 </LinearLayout>
