--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -8,13 +8,14 @@
     android:id="@+id/main_relative_layout">
 
     <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar"
+        android:id="@+id/main_toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="top"
         android:minHeight="?attr/actionBarSize"
         app:layout_collapseMode="pin"
-        app:popupTheme="@style/AppTheme"
+        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
         app:titleMarginTop="15dp">
 
        <include layout="@layout/list_item_spinner"/>
@@ -24,17 +25,18 @@
     <Spinner
         android:id="@+id/spinner"
         android:textAlignment="center"
-        android:layout_marginLeft="40dp"
+        android:layout_marginLeft="46dp"
         android:dropDownVerticalOffset="56dp"
         android:popupBackground="@color/colorAccent"
         android:layout_width="match_parent"
-        android:layout_height="56dp">
+        android:layout_height="56dp"
+        android:layout_alignParentStart="true">
     </Spinner>
 
     <android.support.design.widget.CoordinatorLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/toolbar"
+        android:layout_below="@+id/main_toolbar"
         android:background="@color/colorBackgroundLight">
 
         <android.support.v4.widget.NestedScrollView
