--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="homepunk.lesson.first.view.search.SearchFragment">
+    tools:context="homepunk.lesson.first.ui.search.SearchFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
