--- a/app/src/main/res/layout/fragment_detailed.xml
+++ b/app/src/main/res/layout/fragment_detailed.xml
@@ -20,7 +20,7 @@
             android:layout_height="wrap_content"
             android:scaleType="fitXY" />
 
-        <homepunk.lesson.first.ui.custom.CustomShadowedView
+        <homepunk.lesson.series.ui.custom.CustomShadowedView
             android:id="@+id/custom_shadowed_view_id"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
