--- a/app/src/main/res/layout/list_item_tvseries.xml
+++ b/app/src/main/res/layout/list_item_tvseries.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
@@ -17,18 +16,71 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
 
-            <ImageView
-                android:id="@+id/item_poster"
+            <FrameLayout
                 android:layout_width="match_parent"
-                android:layout_height="270dp"
-                android:layout_gravity="center"
-                android:layout_weight="1"
-                android:cropToPadding="false"
-                android:fitsSystemWindows="true"
-                android:foregroundGravity="center"
-                android:scaleType="centerCrop"
-                app:layout_collapseMode="parallax"
-                app:layout_scrollFlags="scroll|enterAlways" />
+                android:layout_height="wrap_content">
+
+                <ImageView
+                    android:id="@+id/item_poster"
+                    android:layout_width="match_parent"
+                    android:layout_height="300dp"
+                    android:layout_gravity="center"
+                    android:layout_weight="1"
+                    android:cropToPadding="false"
+                    android:fitsSystemWindows="true"
+                    android:foregroundGravity="center"
+                    android:scaleType="centerCrop"
+                    app:layout_collapseMode="parallax"
+                    app:layout_scrollFlags="scroll|enterAlways" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="56dp"
+                    android:layout_gravity="bottom"
+                    android:alpha="0.92"
+                    android:backgroundTint="@color/colorAccent"
+                    android:background="@xml/linear_layout_corners"
+                    android:orientation="horizontal">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_gravity="bottom"
+                        android:layout_weight="0.1"
+                        android:paddingLeft="16dp"
+                        android:orientation="vertical">
+
+                        <TextView
+                            android:id="@+id/id_series_title"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:layout_gravity="bottom"
+                            android:layout_weight="0.1"
+                            android:textColor="@color/colorBackgroundLight"
+                            android:textSize="16sp" />
+
+                        <TextView
+                            android:id="@+id/id_series_last_update"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:layout_gravity="bottom"
+                            android:layout_weight="0.1"
+                            android:textColor="@color/colorPrimary"
+                            android:paddingBottom="4dp"
+                            android:textSize="13sp" />
+                    </LinearLayout>
+
+                    <ImageView
+                        android:id="@+id/id_image_view"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_weight="0.5"
+                        android:background="@color/colorAccent"
+                        android:paddingRight="8dp"
+                        android:src="@drawable/ic_star_full" />
+                </LinearLayout>
+            </FrameLayout>
         </LinearLayout>
     </android.support.v7.widget.CardView>
 </LinearLayout>
