--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -39,10 +39,10 @@
         android:layout_below="@+id/main_toolbar"
         android:background="@color/colorBackgroundLight">
 
-        <android.support.v4.widget.NestedScrollView
-            android:id="@+id/myScrollingContent"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+        <!--<android.support.v4.widget.NestedScrollView-->
+            <!--android:id="@+id/myScrollingContent"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="match_parent">-->
 
             <FrameLayout
                 android:id="@+id/contentContainer"
@@ -50,7 +50,7 @@
                 android:layout_height="wrap_content"
                 android:layout_above="@+id/bottomBar"/>
 
-        </android.support.v4.widget.NestedScrollView>
+        <!--</android.support.v4.widget.NestedScrollView>-->
 
         <com.roughike.bottombar.BottomBar
             android:id="@+id/bottomBar"
