--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/main_relative_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:pp="http://schemas.android.com/tools"
-    android:fitsSystemWindows="true"
-    android:id="@+id/main_relative_layout">
+    android:fitsSystemWindows="true">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/main_toolbar"
@@ -14,24 +13,22 @@
         android:gravity="top"
         android:minHeight="?attr/actionBarSize"
         app:layout_collapseMode="pin"
-        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
         app:titleMarginTop="15dp">
 
-       <include layout="@layout/list_item_spinner"/>
+        <include layout="@layout/list_item_spinner" />
 
     </android.support.v7.widget.Toolbar>
 
     <Spinner
         android:id="@+id/spinner"
-        android:textAlignment="center"
-        android:layout_marginLeft="46dp"
-        android:dropDownVerticalOffset="56dp"
-        android:popupBackground="@color/colorAccent"
         android:layout_width="match_parent"
         android:layout_height="56dp"
-        android:layout_alignParentStart="true">
-    </Spinner>
+        android:layout_marginLeft="48dp"
+        android:layout_alignParentStart="true"
+        android:dropDownVerticalOffset="56dp"
+        android:popupBackground="@color/colorAccent"/>
 
     <android.support.design.widget.CoordinatorLayout
         android:layout_width="match_parent"
@@ -39,18 +36,16 @@
         android:layout_below="@+id/main_toolbar"
         android:background="@color/colorBackgroundLight">
 
-        <!--<android.support.v4.widget.NestedScrollView-->
-            <!--android:id="@+id/myScrollingContent"-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="match_parent">-->
+        <android.support.v4.view.ViewPager
+            android:id="@+id/id_main_view_pager"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
 
             <FrameLayout
-                android:id="@+id/contentContainer"
+                android:id="@+id/content_container"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_above="@+id/bottomBar"/>
-
-        <!--</android.support.v4.widget.NestedScrollView>-->
+                android:layout_above="@+id/bottomBar" />
 
         <com.roughike.bottombar.BottomBar
             android:id="@+id/bottomBar"
@@ -58,11 +53,11 @@
             android:layout_height="56dp"
             android:layout_gravity="bottom"
             android:background="@color/colorAccent"
-            app:bb_titleTextAppearance="@color/colorPrimary"
-            app:bb_inActiveTabColor="@color/colorBackgroundLightTwo"
             app:bb_activeTabColor="@color/colorPrimary"
-            app:bb_showShadow="false"
             app:bb_behavior="shy|shifting"
-            app:bb_tabXmlResource="@xml/bottombar_tabs" />
+            app:bb_inActiveTabColor="@color/colorBackgroundLightTwo"
+            app:bb_showShadow="false"
+            app:bb_tabXmlResource="@xml/bottombar_tabs"
+            app:bb_titleTextAppearance="@color/colorPrimary" />
     </android.support.design.widget.CoordinatorLayout>
 </RelativeLayout>
