--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -7,6 +7,7 @@
     android:layout_height="match_parent"
     tools:context="homepunk.lesson.series.ui.main.MainFragment"
     tools:showIn="@layout/content_main">
+    <include layout="@layout/list_item_spinner" />
 
     <com.dinuscxj.refresh.RecyclerRefreshLayout
         android:layout_width="match_parent"
@@ -16,7 +17,7 @@
         <android.support.v7.widget.RecyclerView
             android:id="@+id/movies_rv"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:clipToPadding="false"
             android:scrollbars="horizontal" />
     </com.dinuscxj.refresh.RecyclerRefreshLayout>
