--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -10,14 +10,11 @@
         android:id="@+id/main_toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="top"
         android:minHeight="?attr/actionBarSize"
         app:layout_collapseMode="pin"
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
         app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-        app:titleMarginTop="15dp">
-
-    </android.support.v7.widget.Toolbar>
+        app:titleMarginTop="15dp"></android.support.v7.widget.Toolbar>
 
     <android.support.design.widget.CoordinatorLayout
         android:layout_width="match_parent"
@@ -25,16 +22,11 @@
         android:layout_below="@+id/main_toolbar"
         android:background="@color/colorBackgroundLight">
 
-        <android.support.v4.view.ViewPager
-            android:id="@+id/id_main_view_pager"
+        <FrameLayout
+            android:id="@+id/content_container"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
-
-            <FrameLayout
-                android:id="@+id/content_container"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_above="@+id/bottomBar" />
+            android:layout_height="wrap_content"
+            android:layout_above="@+id/bottomBar" />
 
         <com.roughike.bottombar.BottomBar
             android:id="@+id/bottomBar"
@@ -48,5 +40,13 @@
             app:bb_showShadow="false"
             app:bb_tabXmlResource="@xml/bottombar_tabs"
             app:bb_titleTextAppearance="@color/colorPrimary" />
+
+        <android.support.v4.view.ViewPager xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:tools="http://schemas.android.com/tools"
+            android:id="@+id/pager"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            tools:context=".MainActivity" />
+
     </android.support.design.widget.CoordinatorLayout>
 </RelativeLayout>
