--- a/app/src/main/res/layout/fragment_top_rated.xml
+++ b/app/src/main/res/layout/fragment_top_rated.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="homepunk.lesson.series.ui.main.TopRatedFragment">
+    tools:context="homepunk.lesson.series.ui.main.PopularFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
