--- a/app/src/main/res/layout/list_item_spinner.xml
+++ b/app/src/main/res/layout/list_item_spinner.xml
@@ -3,7 +3,9 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:gravity="center_horizontal"
+    android:gravity="center"
+    android:layout_gravity="center"
+    android:textAlignment="center"
     android:textSize="16sp"
-    android:textColor="@color/colorText"
+    android:textColor="@color/colorBackgroundLight"
     />
