--- a/app/src/main/res/layout/list_item_grid_poster.xml
+++ b/app/src/main/res/layout/list_item_grid_poster.xml
@@ -10,6 +10,7 @@
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:foreground="?attr/selectableItemBackground"
         app:cardCornerRadius="7dp">
 
         <LinearLayout
