--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -3,11 +3,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".MainActivity"
     xmlns:tools="http://schemas.android.com/tools">
+
     <item
         android:id="@+id/action_search"
-        android:visible="true"
-        app:showAsAction="always"
-        android:icon="@drawable/ic_new"
-        app:actionViewClass="android.support.v7.widget.SearchView"
-        android:title="Поиск" />
+        android:title="search"
+        android:orderInCategory="100"
+        android:showAsAction="always"
+        android:actionLayout="@layout/fragment_search"/>
 </menu>
