--- a/app/src/main/res/menu/menu_spinner.xml
+++ b/app/src/main/res/menu/menu_spinner.xml
@@ -9,6 +9,6 @@
         app:actionViewClass="android.widget.Spinner"
         android:gravity="center"
         android:textAlignment="center"
-        android:background="@color/colorAccent"
+        android:background="@color/colorPrimary"
         app:showAsAction="always"/>
 </menu>
