--- a/app/src/main/res/layout/list_item_backdrop_poster.xml
+++ b/app/src/main/res/layout/list_item_backdrop_poster.xml
@@ -34,8 +34,8 @@
                 android:layout_gravity="bottom"
                 android:alpha="0.92"
                 android:paddingLeft="20dp"
-                android:background="@xml/linear_layout_corners"
-                android:backgroundTint="@color/colorAccent"
+                android:background="@xml/rounded_corners_linear_layout"
+                android:backgroundTint="@color/colorPrimary"
                 android:orientation="horizontal">
 
                 <TextView
