--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -1,13 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".MainActivity"
-    xmlns:tools="http://schemas.android.com/tools">
-
-    <item
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+    <!--<item
         android:id="@+id/action_search"
         android:title="search"
+        android:icon="@drawable/ic_search_white_24dp"
+        app:actionViewClass="android.support.v7.widget.SearchView"
+        app:showAsAction="always|collapseActionView" />-->
+    <item
+        android:id="@+id/action_search"
+        android:icon="@drawable/ic_action_search_white"
         android:orderInCategory="100"
-        android:showAsAction="always"
-        android:actionLayout="@layout/fragment_search"/>
+        android:title="@string/abc_search_hint"
+        app:showAsAction="always" />
 </menu>
